--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -110,6 +110,9 @@ iframe {
   margin-right: auto;
 }
 
+.presentacion {
+  padding-bottom: 180px;
+}
 .presentacion h3, .presentacion h4 {
   text-align: center;
   margin-left: 10px;
@@ -366,6 +369,7 @@ footer {
     display: flex;
   }
   .menu {
+    z-index: 1;
     position: absolute;
     top: 0;
     margin-top: 80px;
@@ -417,6 +421,13 @@ footer {
   #lena img {
     margin-bottom: 120px;
   }
+  .presentacion {
+    padding-bottom: 0px;
+  }
+  .carousel-inner img {
+    width: 700px;
+    height: 500px;
+  }
   iframe {
     width: 600px;
     height: 400px;
@@ -437,9 +448,6 @@ footer {
   .columnas {
     padding-bottom: 120px;
   }
-  .carousel-caption {
-    display: none !important;
-  }
   .carousel-inner {
     margin-bottom: 300px;
   }
@@ -456,6 +464,16 @@ footer {
     width: 480px;
     height: 300px;
     margin-right: 10px;
+  }
+  .columnas {
+    margin-bottom: 20px;
+  }
+  .presentacion {
+    padding-bottom: 0px;
+  }
+  .carousel-inner img {
+    width: 600px;
+    height: 450px;
   }
   .sucursales {
     margin-top: 25px;
@@ -487,7 +505,7 @@ footer {
     font-size: 35px;
   }
   h3 {
-    font-size: large;
+    font-size: larger;
   }
   form {
     padding-bottom: 160px;
@@ -503,11 +521,21 @@ footer {
   .sucur3 {
     display: none;
   }
+  .presentacion {
+    padding-bottom: 0px;
+  }
+  .carousel-inner img {
+    width: 450px;
+    height: 350px;
+  }
   .menu {
     width: 98.9%;
   }
   .columnas {
     padding-bottom: 180px;
+  }
+  .columnas img {
+    margin-top: 75px;
   }
   .carousel-caption {
     display: none !important;
@@ -548,13 +576,17 @@ footer {
     font-size: 35px;
   }
   h3 {
-    font-size: large;
+    font-size: larger;
+  }
+  .presentacion {
+    padding-bottom: 0px;
+  }
+  .carousel-inner img {
+    width: 450px;
+    height: 350px;
   }
   .carousel-caption {
     display: none !important;
-  }
-  .carousel-inner {
-    margin-bottom: 150px;
   }
   form {
     padding-bottom: 160px;
@@ -577,6 +609,7 @@ footer {
     padding-bottom: 100px;
   }
   .columnas img {
+    margin-top: 100px;
     width: 300px;
     height: 250px;
   }
@@ -643,11 +676,15 @@ footer {
     margin-left: 14px;
     width: 90%;
   }
+  .presentacion {
+    padding-bottom: 0px;
+  }
+  .carousel-inner img {
+    width: 350px;
+    height: 300px;
+  }
   .carousel-caption {
     display: none !important;
-  }
-  .carousel-inner {
-    margin-bottom: 140px;
   }
   .nosotros img {
     width: 250px;
@@ -663,7 +700,7 @@ footer {
     font-size: 30px;
   }
   h3 {
-    font-size: medium;
+    font-size: large;
   }
   .columnas {
     padding-bottom: 100px;
@@ -710,8 +747,8 @@ footer {
     display: block;
   }
   #lena img {
-    padding-bottom: 20px;
-    padding-left: 17px;
+    margin-bottom: 10px;
+    margin-left: 20px;
     width: 410px;
     height: 350px;
   }
@@ -720,8 +757,8 @@ footer {
     display: block;
   }
   #roger img {
-    padding-bottom: 20px;
-    padding-left: 17px;
+    margin-bottom: 10px;
+    margin-left: 20px;
     width: 410px;
     height: 350px;
   }
@@ -729,8 +766,8 @@ footer {
     display: block;
   }
   #killi img {
-    padding-bottom: 20px;
-    padding-left: 17px;
+    margin-bottom: 10px;
+    margin-left: 20px;
     width: 410px;
     height: 350px;
   }
@@ -738,14 +775,10 @@ footer {
     display: block;
   }
   #ganga img {
-    padding-bottom: 20px;
-    padding-left: 17px;
+    margin-bottom: 10px;
+    margin-left: 20px;
     width: 410px;
     height: 350px;
-  }
-  .textoder {
-    margin-top: 20px;
-    padding-bottom: 100px;
   }
   .redes {
     display: none;
@@ -797,8 +830,11 @@ footer {
   .ubicacion h2 {
     font-size: x-large;
   }
+  p {
+    font-size: smaller;
+  }
   h3 {
-    font-size: medium;
+    font-size: 20px;
   }
   body {
     font-size: small;
@@ -806,11 +842,15 @@ footer {
   .columnas {
     padding-bottom: 120px;
   }
+  .carousel-inner {
+    margin-left: 10px;
+  }
+  .carousel-inner img {
+    width: 300px;
+    height: 250px;
+  }
   .carousel-caption {
     display: none !important;
-  }
-  .carousel-inner {
-    margin-bottom: 150px;
   }
   .nosotros img {
     width: 250px;
@@ -843,13 +883,19 @@ footer {
     margin-left: 10px;
     width: 87%;
   }
+  .imgmobile {
+    display: block;
+  }
+  .imgdesktop {
+    display: none;
+  }
   /* Plantilla para número impar */
   #lena {
     display: block;
   }
   #lena img {
     margin-bottom: 20px;
-    padding-left: 13px;
+    margin-left: 13px;
     width: 260px;
     height: 250px;
   }
@@ -859,7 +905,8 @@ footer {
   }
   #roger img {
     margin-top: 20px;
-    padding-left: 30px;
+    margin-bottom: 20px;
+    margin-left: 30px;
     width: 260px;
     height: 250px;
   }
@@ -868,7 +915,7 @@ footer {
   }
   #killi img {
     margin-bottom: 20px;
-    padding-left: 13px;
+    margin-left: 13px;
     width: 260px;
     height: 250px;
   }
@@ -877,7 +924,8 @@ footer {
   }
   #ganga img {
     margin-top: 20px;
-    padding-left: 30px;
+    margin-bottom: 20px;
+    margin-left: 30px;
     width: 260px;
     height: 250px;
   }
@@ -901,9 +949,6 @@ footer {
   .redesmobile a:hover {
     transform: scale(1.2);
     transition: 1s;
-  }
-  .arribafooter p {
-    padding-right: 10px;
   }
   .sucursalesfooter {
     grid-template-rows: 1fr;
